# ai-agent-playbook

./: SPEC.md  index.html  product-02.html  product-03.html  product-04.html  product-05.html  product-06.html  product-07.html  product-08.html  robots.txt  sitemap.xml
design/: motion.css  tokens.css  typography.css
docs/: DESIGN_SYSTEM.md  QA_CHECKLIST.md  SCREEN_SPEC.md
shortform/: .env.example  .gitignore  ASSET_PROMPTS.md  PLAYBOOK.md  README.md  SETUP.md  SPEC.md  affiliates.example.yaml  persona.kr.yaml  persona.product.yaml  products.example.yaml  pyproject.toml  sources.example.yaml  start.bat  start.sh  templates.yaml  tracks.yaml
shortform/app/: __main__.py  analytics.py  config.py  db.py  llm.py  optimize.py  outreach.py  policy.py  scheduler.py  schemas.py
shortform/app/dashboard/: index.html  server.py
shortform/app/editing/: ffmpeg_graph.py  subtitles.py  timeline.py  tts.py
shortform/app/prompts/: audience_fit.md  comment_mining.md  commentary_script.md  product_research.md  product_script.md  risk_review.md  title_gen.md  tone_review.md
shortform/app/stages/: longform.py  m1_discover.py  m2_acquire.py  m3_analyze.py  m4_edit.py  m5_render.py  m6_publish.py  m8_feedback.py  product_fetch.py  product_research.py  products.py
shortform/tests/: test_db.py  test_timeline.py
